--- a/Practice/Button Up/style.css
+++ b/Practice/Button Up/style.css
@@ -1,16 +1,14 @@
-* {
-    font-family: sans-serif;
-}
+
 button:active {
     position:relative;
 	top:5px;
 }
-div{
-    padding-left: 80px;
-}
-button{
-    margin: 15px;
+.gradient-button1 button, .btn-add, .btn-create{
+    display:block;
+    margin-bottom: 10px;
+    height: 40px;
     cursor: pointer;
+    
 }
 .gradient-button1 button{
     padding: 1px 50px 1px 50px;
@@ -20,12 +18,12 @@ button{
     border: 2px solid rgb(143, 136, 136);
     border-radius: 70px;
     color: #9e5ca7;
-    font-size: 40px;
+    font-size: 20px;
     text-shadow: 2px 2px 5px rgb(255, 0, 170);
 }
-#button2{
+.btn-add{
     background-color: #01D1AF;
-    border: 1px solid #01D1AF;
+    border: none;
     color: white;
     text-align: center;
     font-size: 40px;
@@ -33,13 +31,11 @@ button{
     height: 70px;
     border-radius: 50%;
 }
-#button3{
+.btn-create{
     background-color: rgb(52, 141, 224);
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 0px;
-    box-shadow: 7px 7px 4px black;
+    box-shadow: 3px 3px black;
     color: white;
-    font-size: 20px;
-    width: 250px;
-    height: 40px;
+    width: 200px;
 }
